--- a/WEB_UI/Content/view/ids_layout.css
+++ b/WEB_UI/Content/view/ids_layout.css
@@ -155,7 +155,7 @@ header {
     background-size: cover;
     -o-background-size: cover;
     background-position: center;
-    background-image: url(../../Images/header.jpg);
+    /*background-image: url(../../Images/header.jpg);*/
     text-align: center;
     color: white;
 }
