--- a/WEB_UI/Views/Shared/_IDS_Layout.cshtml
+++ b/WEB_UI/Views/Shared/_IDS_Layout.cshtml
@@ -153,8 +153,8 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Images/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="Images/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                    <a href="~/Images/portfolio/thumbnails/1.jpg" class="portfolio-box">
+                        <img src="~/Images/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -168,8 +168,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Images/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="Images/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                    <a href="~/Images/portfolio/thumbnails/2.jpg" class="portfolio-box">
+                        <img src="~/Images/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -183,8 +183,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Images/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="Images/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                    <a href="~/Images/portfolio/thumbnails/3.jpg" class="portfolio-box">
+                        <img src="~/Images/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
