--- a/WEB_UI/Views/Home/Index.cshtml
+++ b/WEB_UI/Views/Home/Index.cshtml
@@ -15,95 +15,64 @@
 }
 
 @section Services {
-    @*<div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
-                    </div>
-                </div>
-            </div>
-        </div>*@
+
 }
 
 @section Document {
-    @*<div class="container-fluid">
+    <div class="container-fluid">
         <div class="row no-gutter popup-gallery">
             <div class="col-lg-4 col-sm-6">
-                <a href="Images/portfolio/fullsize/1.jpg" class="portfolio-box">
-                    <img src="Images/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                <a href="~/Images/portfolio/thumbnails/1.jpg" class="portfolio-box">
+                    <img src="~/Images/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Руководство пользователя
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ИДС "Собственный парк"
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="Images/portfolio/fullsize/2.jpg" class="portfolio-box">
-                    <img src="Images/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                <a href="~/Images/portfolio/thumbnails/2.jpg" class="portfolio-box">
+                    <img src="~/Images/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Руководство пользователя
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ВДС "Внутренний учет"
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="Images/portfolio/fullsize/3.jpg" class="portfolio-box">
-                    <img src="Images/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                <a href="~/Images/portfolio/thumbnails/3.jpg" class="portfolio-box">
+                    <img src="~/Images/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Инструкции
                             </div>
                             <div class="project-name">
-                                Project Name
+                                ИДС
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
         </div>
-    </div>*@
+    </div>
 }
 
-<h1 id="homeHeading">Информационно диспетчерская система</h1>
+<h1 id="homeHeading">@GlobalResource.home_title1</h1>
 <hr>
-<p>Транспортный департамент ArcelorMittal Кривой Рог</p>
+<p>@GlobalResource.home_title2</p>
 @*<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>*@
 
 
