formating css js file

--- a/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicСards.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicСards.cshtml
@@ -1,9 +1,12 @@
-﻿@{
-    ViewBag.Title = "ElectronicСards";
+﻿@using WEB_UI.App_LocalResources;
+@{
+    ViewBag.Title = @IDSMORSResource.ecards_title;
 }
 
 @section styles {
-    <link rel="stylesheet" type="text/css" href="~/Content/view/electronic-cards.css">
+<link rel="stylesheet" type="text/css" href="~/Content/view/shared/filter-menu.css">
+<link rel="stylesheet" type="text/css" href="~/Content/view/idsmors/electronic-cards.css">
+
 }
 
 @section scripts {
