--- a/WEB_UI/Areas/IDSMORS/Views/Home/Index.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@using WEB_UI.App_LocalResources;
 @{
-    Layout = "~/Views/Shared/_IDS_Layout.cshtml";
+    Layout = "~/Views/Shared/_IDS.cshtml";
     ViewBag.Title = @IDSMORSResource.system_idsmors_title;
 }
 
 @section styles {
-    <link rel="stylesheet" type="text/css" href="~/Content/view/home-idsmors.css">
-    <link rel="stylesheet" type="text/css" href="~/Content/view/home-menu.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/view/idsmors/home.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/view/shared/home-menu.css">
 }
 
 @section scripts {
