--- a/WEB_UI/Content/view/shared/filter-menu.css
+++ b/WEB_UI/Content/view/shared/filter-menu.css
@@ -123,7 +123,7 @@ xtab-filter
         display: inline-block;
         width: 16px;
         height: 16px;
-        background: url("../../Images/project/cd-icon-arrow.svg") no-repeat center center;
+        background: url("../../../Images/project/cd-icon-arrow.svg") no-repeat center center;
         -webkit-transition: all 0.3s;
         -moz-transition: all 0.3s;
         transition: all 0.3s;
@@ -432,7 +432,7 @@ xfilter
     text-indent: 100%;
     color: transparent;
     white-space: nowrap;
-    background: transparent url("../../Images/cd-icon-filter.svg") no-repeat center center;
+    background: transparent url("../../../Images/cd-icon-filter.svg") no-repeat center center;
     z-index: 3;
 }
 
