--- a/WEB_UI/Areas/IDSMORS/Views/Shared/_IDSMORS.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Shared/_IDSMORS.cshtml
@@ -13,6 +13,7 @@
     @RenderSection("styles", required: false)
 </head>
 <body>
+    <div id="lockPanel" class="LockOff"></div>
     <header class="cd-header">
         <div id="cd-logo"><a href="#0"><img src="~/Images/amk_logo.png" alt="Logo"></a></div>
         <nav class="cd-main-nav">
