--- a/WEB_UI/Areas/IDSMORS/Views/Home/Index.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
 <div class="content">
     <ul class="ca-menu">
         <li>
-            <a href='@Url.Action("ElectronicСards", "Home", new { area = "IDSMORS" })'>
+            <a href='@Url.Action("ElectronicCards", "Home", new { area = "IDSMORS" })'>
                 <span class="ca-icon">D</span>
                 <div class="ca-content">
                     <h2 class="ca-main">@IDSMORSResource.ecards_title</h2>
