--- a/WEB_UI/Content/view/shared/filter-menu.css
+++ b/WEB_UI/Content/view/shared/filter-menu.css
@@ -65,6 +65,11 @@ Main Components
             overflow: auto;
             -webkit-overflow-scrolling: touch;
         }*/
+        .cd-main-content.is-fixed .cd-filter .cd-filter-form {
+            height: 100vh;
+            overflow: auto;
+            -webkit-overflow-scrolling: touch;
+        }
 
     .cd-main-content.is-fixed .cd-filter-trigger {
         position: fixed;
@@ -374,6 +379,9 @@ xfilter
     /*.cd-filter form {
         padding: 70px 20px;
     }*/
+    .cd-filter .cd-filter-form {
+        padding: 70px 20px;
+    }
 
     .cd-filter .cd-close {
         position: absolute;
@@ -404,6 +412,7 @@ xfilter
     -o-transform: translateX(0);
     transform: translateX(0);
     box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.2);
+    height:auto;
 }
 
     .cd-filter.filter-is-visible .cd-close {
@@ -418,6 +427,9 @@ xfilter
         /*.cd-filter form {
             padding: 70px 10%;
         }*/
+        .cd-filter .cd-filter-form {
+            padding: 70px 10%;
+        }
 }
 
 .cd-filter-trigger {
@@ -462,5 +474,235 @@ xfilter
 
     .cd-filter-trigger.filter-is-visible, .cd-filter-trigger.filter-is-visible:hover {
         color: #ffffff;
+    }
+}
+
+   
+/* -------------------------------- 
+
+xcustom .cd-filter-form elements 
+
+-------------------------------- */
+.cd-filter-block {
+    margin-bottom: 1.6em;
+}
+
+    .cd-filter-block h4 {
+        /* filter block title */
+        position: relative;
+        /*margin-bottom: .2em;
+        padding: 10px 0 10px 20px;*/
+        color: #9a9a9a;
+        text-transform: uppercase;
+        font-weight: 700;
+        font-size: 1.3rem;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        cursor: pointer;
+    }
+
+.no-touch .cd-filter-block h4:hover {
+    color: #41307c;
+}
+
+.cd-filter-block h4::before {
+    /* arrow */
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 16px;
+    height: 16px;
+    background: url("../../../Images/cd-icon-arrow.svg") no-repeat center center;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+    -webkit-transition: -webkit-transform 0.3s;
+    -moz-transition: -moz-transform 0.3s;
+    transition: transform 0.3s;
+}
+
+.cd-filter-block h4.closed::before {
+    -webkit-transform: translateY(-50%) rotate(-90deg);
+    -moz-transform: translateY(-50%) rotate(-90deg);
+    -ms-transform: translateY(-50%) rotate(-90deg);
+    -o-transform: translateY(-50%) rotate(-90deg);
+    transform: translateY(-50%) rotate(-90deg);
+}
+
+.cd-filter-block input, .cd-filter-block select,
+.cd-filter-block .radio-label::before,
+.cd-filter-block .checkbox-label::before {
+    /* shared style for input elements */
+    font-family: "Open Sans", sans-serif;
+    border-radius: 0;
+    background-color: #ffffff;
+    border: 2px solid #e6e6e6;
+}
+
+    .cd-filter-block input[type='search'],
+    .cd-filter-block input[type='text'],
+    .cd-filter-block select {
+        width: 100%;
+        padding: .3em;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        -ms-appearance: none;
+        -o-appearance: none;
+        appearance: none;
+        box-shadow: none;
+    }
+
+        .cd-filter-block input[type='search']:focus,
+        .cd-filter-block input[type='text']:focus,
+        .cd-filter-block select:focus {
+            outline: none;
+            background-color: #ffffff;
+            border-color: #41307c;
+        }
+
+    .cd-filter-block input[type='search'] {
+        /* custom style for the search element */
+        border-color: transparent;
+        background-color: #e6e6e6;
+        /* prevent jump - ios devices */
+        font-size: 1.6rem !important;
+    }
+
+        .cd-filter-block input[type='search']::-webkit-search-cancel-button {
+            display: none;
+        }
+
+.cd-filter-block .cd-select {
+    /* select element wrapper */
+    position: relative;
+}
+
+    .cd-filter-block .cd-select::after {
+        /* switcher arrow for select element */
+        content: '';
+        position: absolute;
+        z-index: 1;
+        right: 14px;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+        transform: translateY(-50%);
+        display: block;
+        width: 16px;
+        height: 16px;
+        background: url("../../../Images/cd-icon-arrow.svg") no-repeat center center;
+        pointer-events: none;
+    }
+
+.cd-filter-block select {
+    cursor: pointer;
+    font-size: 1.4rem;
+}
+
+    .cd-filter-block select::-ms-expand {
+        display: none;
+    }
+
+.cd-filter-block .list li {
+    position: relative;
+    margin-bottom: .8em;
+}
+
+    .cd-filter-block .list li:last-of-type {
+        margin-bottom: 0;
+    }
+
+.cd-filter-block input[type=radio],
+.cd-filter-block input[type=checkbox] {
+    /* hide original check and radio buttons */
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    opacity: 0;
+    z-index: 2;
+}
+
+.cd-filter-block .checkbox-label,
+.cd-filter-block .radio-label {
+    padding-left: 24px;
+    font-size: 1.4rem;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+    .cd-filter-block .checkbox-label::before, .cd-filter-block .checkbox-label::after,
+    .cd-filter-block .radio-label::before,
+    .cd-filter-block .radio-label::after {
+        /* custom radio and check boxes */
+        content: '';
+        display: block;
+        position: absolute;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
+
+    .cd-filter-block .checkbox-label::before,
+    .cd-filter-block .radio-label::before {
+        width: 16px;
+        height: 16px;
+        left: 0;
+    }
+
+    .cd-filter-block .checkbox-label::after,
+    .cd-filter-block .radio-label::after {
+        /* check mark - hidden */
+        display: none;
+    }
+
+    .cd-filter-block .checkbox-label::after {
+        /* check mark style for check boxes */
+        width: 16px;
+        height: 16px;
+        background: url("../../../Images/cd-icon-check.svg") no-repeat center center;
+    }
+
+    .cd-filter-block .radio-label::before,
+    .cd-filter-block .radio-label::after {
+        border-radius: 50%;
+    }
+
+    .cd-filter-block .radio-label::after {
+        /* check mark style for radio buttons */
+        width: 6px;
+        height: 6px;
+        background-color: #ffffff;
+        left: 5px;
+    }
+
+.cd-filter-block input[type=radio]:checked + label::before,
+.cd-filter-block input[type=checkbox]:checked + label::before {
+    border-color: #41307c;
+    background-color: #41307c;
+}
+
+.cd-filter-block input[type=radio]:checked + label::after,
+.cd-filter-block input[type=checkbox]:checked + label::after {
+    display: block;
+}
+
+@-moz-document url-prefix() {
+    /* hide custom arrow on Firefox - select element */
+    .cd-filter-block .cd-select::after {
+        display: none;
     }
 }
