--- a/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
@@ -7,12 +7,13 @@
     @Styles.Render("~/DataTables/css")
     <link rel="stylesheet" type="text/css" href="~/Content/view/shared/filter-menu.css">
     <link rel="stylesheet" type="text/css" href="~/Content/view/idsmors/electronic-cards.css">
-<link rel="stylesheet" type="text/css" href="~/Content/DataTables/extensions/Buttons/css/buttons.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/DataTables/extensions/Buttons/css/buttons.dataTables.min.css">
 
 }
 
 @section scripts {
     @Scripts.Render("~/bundles/DataTables")
+
 
     <script src="~/Scripts/view/shared/common.js"></script> <!-- Общая библиотека методов программы -->
     <script src="~/Scripts/api/shared.js"></script> <!-- Общая библиотека методов API -->
@@ -26,16 +27,23 @@
     <div class="cd-tab-filter-wrapper">
         <div class="cd-tab-filter">
             @*<input id="myInput1" type="text" />
-            <input id="myInput2" type="text" />*@ 
-                    
+                <input id="myInput2" type="text" />*@
+
         </div> <!-- cd-tab-filter -->
     </div> <!-- cd-tab-filter-wrapper -->
     <section class="cd-gallery">
-        <table class='display compact' id="table-cards-wagons" style="width:100%" cellpadding="0"></table>
+        <table class='compact cell-border display' id="table-cards-wagons" style="width:100%" cellpadding="0"></table>
     </section> <!-- cd-gallery -->
     <div class="cd-filter">
-        <div id="search-contener" class="cd-filter-form"></div>   
+        <form>
+        </form>
         <a href="#0" class="cd-close">Close</a>
     </div> <!-- cd-filter -->
     <a href="#0" class="cd-filter-trigger">Filters</a>
 </main> <!-- cd-main-content -->
+
+<div class="cd-wagon-content">
+    <div>
+    </div>
+    <a href="#0" class="close cd-img-replace">Close</a>
+</div> <!-- .cd-project-content -->
