--- a/WEB_UI/Content/DataTables/extensions/Buttons/css/buttons.bootstrap4.css
+++ b/WEB_UI/Content/DataTables/extensions/Buttons/css/buttons.bootstrap4.css
@@ -58,37 +58,45 @@ div.dt-button-collection-title {
   font-size: 0.9em;
 }
 
-ul.dt-button-collection.dropdown-menu {
+div.dt-button-collection-title:empty {
+  display: none;
+}
+
+div.dt-button-collection.dropdown-menu {
   display: block;
   z-index: 2002;
-  -webkit-column-gap: 8px;
-  -moz-column-gap: 8px;
-  -ms-column-gap: 8px;
-  -o-column-gap: 8px;
-  column-gap: 8px;
 }
-ul.dt-button-collection.dropdown-menu.fixed {
+div.dt-button-collection.dropdown-menu.fixed {
   position: fixed;
   top: 50%;
   left: 50%;
   margin-left: -75px;
   border-radius: 0;
 }
-ul.dt-button-collection.dropdown-menu.fixed.two-column {
+div.dt-button-collection.dropdown-menu.fixed.two-column {
   margin-left: -150px;
 }
-ul.dt-button-collection.dropdown-menu.fixed.three-column {
+div.dt-button-collection.dropdown-menu.fixed.three-column {
   margin-left: -225px;
 }
-ul.dt-button-collection.dropdown-menu.fixed.four-column {
+div.dt-button-collection.dropdown-menu.fixed.four-column {
   margin-left: -300px;
 }
-ul.dt-button-collection.dropdown-menu > * {
+div.dt-button-collection.dropdown-menu > div:last-child {
+  -webkit-column-gap: 8px;
+  -moz-column-gap: 8px;
+  -ms-column-gap: 8px;
+  -o-column-gap: 8px;
+  column-gap: 8px;
+}
+div.dt-button-collection.dropdown-menu > div:last-child > * {
   -webkit-column-break-inside: avoid;
   break-inside: avoid;
 }
-ul.dt-button-collection.dropdown-menu.two-column {
+div.dt-button-collection.dropdown-menu.two-column {
   width: 300px;
+}
+div.dt-button-collection.dropdown-menu.two-column > div:last-child {
   padding-bottom: 1px;
   -webkit-column-count: 2;
   -moz-column-count: 2;
@@ -96,8 +104,10 @@ ul.dt-button-collection.dropdown-menu.two-column {
   -o-column-count: 2;
   column-count: 2;
 }
-ul.dt-button-collection.dropdown-menu.three-column {
+div.dt-button-collection.dropdown-menu.three-column {
   width: 450px;
+}
+div.dt-button-collection.dropdown-menu.three-column > div:last-child {
   padding-bottom: 1px;
   -webkit-column-count: 3;
   -moz-column-count: 3;
@@ -105,8 +115,10 @@ ul.dt-button-collection.dropdown-menu.three-column {
   -o-column-count: 3;
   column-count: 3;
 }
-ul.dt-button-collection.dropdown-menu.four-column {
+div.dt-button-collection.dropdown-menu.four-column {
   width: 600px;
+}
+div.dt-button-collection.dropdown-menu.four-column > div:last-child {
   padding-bottom: 1px;
   -webkit-column-count: 4;
   -moz-column-count: 4;
@@ -114,39 +126,41 @@ ul.dt-button-collection.dropdown-menu.four-column {
   -o-column-count: 4;
   column-count: 4;
 }
-ul.dt-button-collection.dropdown-menu .dt-button {
+div.dt-button-collection.dropdown-menu .dt-button {
   border-radius: 0;
 }
 
-ul.dt-button-collection {
-  -webkit-column-gap: 8px;
-  -moz-column-gap: 8px;
-  -ms-column-gap: 8px;
-  -o-column-gap: 8px;
-  column-gap: 8px;
-}
-ul.dt-button-collection.fixed {
+div.dt-button-collection.fixed {
   position: fixed;
   top: 50%;
   left: 50%;
   margin-left: -75px;
   border-radius: 0;
 }
-ul.dt-button-collection.fixed.two-column {
+div.dt-button-collection.fixed.two-column {
   margin-left: -150px;
 }
-ul.dt-button-collection.fixed.three-column {
+div.dt-button-collection.fixed.three-column {
   margin-left: -225px;
 }
-ul.dt-button-collection.fixed.four-column {
+div.dt-button-collection.fixed.four-column {
   margin-left: -300px;
 }
-ul.dt-button-collection > * {
+div.dt-button-collection > div:last-child {
+  -webkit-column-gap: 8px;
+  -moz-column-gap: 8px;
+  -ms-column-gap: 8px;
+  -o-column-gap: 8px;
+  column-gap: 8px;
+}
+div.dt-button-collection > div:last-child > * {
   -webkit-column-break-inside: avoid;
   break-inside: avoid;
 }
-ul.dt-button-collection.two-column {
+div.dt-button-collection.two-column {
   width: 300px;
+}
+div.dt-button-collection.two-column > div:last-child {
   padding-bottom: 1px;
   -webkit-column-count: 2;
   -moz-column-count: 2;
@@ -154,8 +168,10 @@ ul.dt-button-collection.two-column {
   -o-column-count: 2;
   column-count: 2;
 }
-ul.dt-button-collection.three-column {
+div.dt-button-collection.three-column {
   width: 450px;
+}
+div.dt-button-collection.three-column > div:last-child {
   padding-bottom: 1px;
   -webkit-column-count: 3;
   -moz-column-count: 3;
@@ -163,8 +179,10 @@ ul.dt-button-collection.three-column {
   -o-column-count: 3;
   column-count: 3;
 }
-ul.dt-button-collection.four-column {
+div.dt-button-collection.four-column {
   width: 600px;
+}
+div.dt-button-collection.four-column > div:last-child {
   padding-bottom: 1px;
   -webkit-column-count: 4;
   -moz-column-count: 4;
@@ -172,13 +190,13 @@ ul.dt-button-collection.four-column {
   -o-column-count: 4;
   column-count: 4;
 }
-ul.dt-button-collection .dt-button {
+div.dt-button-collection .dt-button {
   border-radius: 0;
 }
-ul.dt-button-collection.fixed {
+div.dt-button-collection.fixed {
   max-width: none;
 }
-ul.dt-button-collection.fixed:before, ul.dt-button-collection.fixed:after {
+div.dt-button-collection.fixed:before, div.dt-button-collection.fixed:after {
   display: none;
 }
 
