--- a/WEB_UI/Content/DataTables/extensions/Buttons/css/buttons.dataTables.css
+++ b/WEB_UI/Content/DataTables/extensions/Buttons/css/buttons.dataTables.css
@@ -58,6 +58,10 @@ div.dt-button-collection-title {
   font-size: 0.9em;
 }
 
+div.dt-button-collection-title:empty {
+  display: none;
+}
+
 button.dt-button,
 div.dt-button,
 a.dt-button {
@@ -93,6 +97,7 @@ a.dt-button {
   user-select: none;
   text-decoration: none;
   outline: none;
+  text-overflow: ellipsis;
 }
 button.dt-button.disabled,
 div.dt-button.disabled,
@@ -219,11 +224,7 @@ div.dt-button-collection {
   z-index: 2002;
   border-radius: 5px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
-  -webkit-column-gap: 8px;
-  -moz-column-gap: 8px;
-  -ms-column-gap: 8px;
-  -o-column-gap: 8px;
-  column-gap: 8px;
+  box-sizing: border-box;
 }
 div.dt-button-collection button.dt-button,
 div.dt-button-collection div.dt-button,
@@ -272,12 +273,21 @@ div.dt-button-collection.fixed.three-column {
 div.dt-button-collection.fixed.four-column {
   margin-left: -300px;
 }
-div.dt-button-collection > * {
+div.dt-button-collection > div:last-child {
+  -webkit-column-gap: 8px;
+  -moz-column-gap: 8px;
+  -ms-column-gap: 8px;
+  -o-column-gap: 8px;
+  column-gap: 8px;
+}
+div.dt-button-collection > div:last-child > * {
   -webkit-column-break-inside: avoid;
   break-inside: avoid;
 }
 div.dt-button-collection.two-column {
   width: 300px;
+}
+div.dt-button-collection.two-column > div:last-child {
   padding-bottom: 1px;
   -webkit-column-count: 2;
   -moz-column-count: 2;
@@ -287,6 +297,8 @@ div.dt-button-collection.two-column {
 }
 div.dt-button-collection.three-column {
   width: 450px;
+}
+div.dt-button-collection.three-column > div:last-child {
   padding-bottom: 1px;
   -webkit-column-count: 3;
   -moz-column-count: 3;
@@ -296,6 +308,8 @@ div.dt-button-collection.three-column {
 }
 div.dt-button-collection.four-column {
   width: 600px;
+}
+div.dt-button-collection.four-column > div:last-child {
   padding-bottom: 1px;
   -webkit-column-count: 4;
   -moz-column-count: 4;
