--- a/WEB_UI/Content/view/idsmors/electronic-cards.css
+++ b/WEB_UI/Content/view/idsmors/electronic-cards.css
@@ -1,1 +1,144 @@
-﻿
+﻿/* -------------------------------- 
+
+Project content panel 
+
+-------------------------------- */
+.cd-wagon-content {
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    background-color: #ebebeb;
+    /* Force Hardware Acceleration */
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transform: translateY(100%);
+    -moz-transform: translateY(100%);
+    -ms-transform: translateY(100%);
+    -o-transform: translateY(100%);
+    transform: translateY(100%);
+    -webkit-transition: -webkit-transform 0.4s 0s, visibility 0s 0.4s;
+    -moz-transition: -moz-transform 0.4s 0s, visibility 0s 0.4s;
+    transition: transform 0.4s 0s, visibility 0s 0.4s;
+    -webkit-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
+    -moz-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
+    transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
+}
+
+    .cd-wagon-content > div {
+        height: 100%;
+        overflow-y: auto;
+        padding: 4em 2em;
+    }
+
+        .cd-wagon-content > div > * {
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+    /*.cd-wagon-content div#accordion_project_steps {
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+    }*/
+
+    .cd-wagon-content.is-visible {
+        visibility: visible;
+        -webkit-transform: translateY(0);
+        -moz-transform: translateY(0);
+        -ms-transform: translateY(0);
+        -o-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-transition: -webkit-transform 0.4s 0s, visibility 0s 0s;
+        -moz-transition: -moz-transform 0.4s 0s, visibility 0s 0s;
+        transition: transform 0.4s 0s, visibility 0s 0s;
+        -webkit-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
+        -moz-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
+        transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
+    }
+
+        .cd-wagon-content.is-visible > div {
+            /* smooth scrolling on iOS */
+            -webkit-overflow-scrolling: touch;
+        }
+
+    .cd-wagon-content h2 {
+        font-size: 2.4rem;
+        font-weight: bold;
+    }
+
+
+        .cd-wagon-content h2.status-open {
+            color: #347e15;
+        }
+
+        .cd-wagon-content h2.status-close {
+            color: #103ca4;
+        }
+
+        .cd-wagon-content h2.status-pause {
+            color: #e94b35;
+        }
+
+    .cd-wagon-content em {
+        display: block;
+        font-size: 1.8rem;
+        font-style: italic;
+        margin: 1em auto;
+    }
+
+    .cd-wagon-content p {
+        margin-bottom: 1em;
+        font-size: 1.4rem;
+        color: #6f757c;
+    }
+
+    .cd-wagon-content em, .cd-wagon-content p {
+        line-height: 1.6;
+    }
+
+    .cd-wagon-content .close {
+        display: block;
+        height: 32px;
+        width: 32px;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background: url(../../../Images/cd-close-dark.svg) no-repeat center center;
+    }
+
+@media only screen and (min-width: 900px) {
+    .cd-wagon-content h2 {
+        font-size: 4rem;
+    }
+
+    .cd-wagon-content em {
+        font-size: 2.4rem;
+    }
+
+    .cd-wagon-content p {
+        font-size: 1.8rem;
+    }
+
+    .cd-wagon-content .close {
+        top: 30px;
+        right: 5%;
+    }
+}
+
+.cd-img-replace {
+    /* replace text with image */
+    color: transparent;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+}
