--- a/WEB_UI/Content/view/shared/_ids.css
+++ b/WEB_UI/Content/view/shared/_ids.css
@@ -511,7 +511,7 @@ a.select-not-lang {
     background-image: url(../../../Images/header.jpg);
 }
 .img-header-idsmors {
-    background-image: url(../../../Images/header.jpg);
+    background-image: url(../../../Images/ids-op.jpg);
 }
 .img-header-access-denied {
     background-image: url(../../../Images/access-denied.jpg);
